fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,8 @@ box-shadow:  5px 5px 18px #bcbcbc,
    display: flex;
    flex-direction: column;
    gap: 20px;
+   margin-bottom: 40px;
+   z-index: 10;
 }
 .links-head {
   font-size: 18px;
@@ -199,6 +201,24 @@ box-shadow:  5px 5px 18px #bcbcbc,
   border-radius: 20px;
   margin: 30px 0px;
   padding: 10px 20px;
+  
+}
+.links {
+
+   margin-bottom: 20px;
+}
+.bottom-svg {
+  
+  width: 100%;
+  height: max-content;
+  background-repeat: no-repeat;
+  
+ 
+  position: absolute;
+  padding-bottom: 0px;
+  bottom: 0;
+  left: 0;
+ 
   
 }
 
